mobile menu fix, spacing fix

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -27,7 +27,6 @@ html {
   
   nav {
     width: 100%;
-    background-color:rgb(102, 137, 121);
     padding-left: 0;
     padding-right: 10px;
     height: 100%;
@@ -94,16 +93,15 @@ fieldset {
 
 p, h2 { 
   font-family: 'Work Sans', sans-serif;
-  font-size: x-large;
-  
+ 
 }
 
 a {
   font-family: 'Oswald', sans-serif;
   font-size: x-large;
-  font-size: normal;
   text-decoration: none;
-  color: #eccd7a;
+  color: white;
+  
 }
 
 h1 {
@@ -114,7 +112,8 @@ h1 {
 }
 
 h2 {
- font-family: 'Montserrat', sans-serif;   
+ font-family: 'Montserrat', sans-serif;  
+ padding: 0; 
 }
 
 
@@ -145,8 +144,14 @@ h2 {
    font-family: 'Montserrat', sans-serif;
   }
 
+  .fa-solid, .fas {
+    font-weight: 900;
+    padding-top: 24px;
+}
+
 #prices {
   font-size: xx-large;
+  padding-top: 2rem;
 
 }
 
@@ -156,8 +161,8 @@ h2 {
 
 
 #map {
-  padding: 10px;
-  padding-top: 2em;
+  padding-top: 7em;
+  padding-bottom: 2em;
 }
 
 #pls-note {
@@ -175,8 +180,7 @@ h2 {
   display: flex;
   flex-wrap: wrap; 
   justify-content: flex-start;
-  
-  
+
 }
 
 
@@ -194,6 +198,7 @@ img {
   width: fit-content;
   padding: 1%;
   font-family: 'Montserrat', sans-serif;
+  font-size: x-large;
   
 }
 
@@ -256,6 +261,7 @@ button {
   display: flex;
   flex-wrap:wrap; 
   justify-content:center;
+  padding-top: 5rem;
 }
 
 
@@ -280,6 +286,7 @@ button {
     background-color: #4a7461b9;
     border-radius: 5px;
     margin: 1%;
+    font-size: x-large;
   }
 
   #address {
@@ -288,6 +295,7 @@ button {
     background-color: #4a7461b9;
     border-radius: 5px;
     margin: 1%;
+    font-size: x-large;
   }
 
 
@@ -301,44 +309,159 @@ input {
 }
 
 
+/* NAVBAR */
 
-/* NAVBAR */ 
-
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #4a7461;
-  overflow:hidden;
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size:22px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
+/* General styles */
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* Generic project styles */
   color: black;
+  font-family: "Gabarito", sans-serif;
 }
 
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color:#eccd7a;
-  color:black;
+
+/* Header */
+header {
+  background-color: #4a7461;
+  padding: 0 1rem;
+  position:fixed; 
+  z-index: 99;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items:right;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
+header a {
+  text-decoration: none;
+  color: #eccd7a;
+}
+
+#menu {
+  font-size: 120%;
+  list-style-type: none;
+  margin-top:0;
+  float:right;
+;
+}
+
+#menu > li {
+  background-color: #4a7461;
+  padding: 1em;
+}
+
+.active hover {
+ color: #ffffff;
+}
+
+/* Navbar styles with droppdown toggle */
+nav {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  padding:0;
+  display: none;
+  top: 100%;
+}
+
+/* Nav toggle */
+#nav-toggle:checked ~ nav {
+  display: block;
+}
+
+#nav-toggle {
   display: none;
 }
 
+.nav-toggle-label {
+  font-size: 2rem;
+}
 
+/* Main Content*/
+main {
+  /* Make main element take up any surplus space to push footer down */
+  flex: 1 0 auto;
+  margin-top: 45px;
+}
+
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+  /* Header */
+  nav {
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width: fit-content;
+    padding-right: 1rem;
+  }
+
+  #menu {
+    display: flex;
+    float:right;
+  }
+
+  #menu > li {
+    padding-left: 2rem;
+
+    
+  }
+
+  .nav-toggle-label {
+    display: none;
+  }
+
+  #logo {
+    font-size: 320%;
+    font-family: 'Oswald', sans-serif;
+    color: #eccd7a;
+    line-height: 75px;
+    margin: 0 0.5rem;
+  }
+
+  /* Main content */
+  main {
+    /* Push main content down to accomodate larger header */
+    margin-top: 90px;
+  }
+
+  #cover-text {
+    font-size: 240%;
+    bottom: 50px;
+  }
+  }
+
+/* Larger devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+  #menu a:hover {
+    border-bottom: 0.5px solid #ffffff;
+  }
+
+  
+}
+
+/* Larger devices (laptops and desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+ /* About section */
+ /* Moves written content to the right side of the image */
+ .about-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3rem;
+  align-items: center;
+}
+
+
+}
 /* MEDIA QUERIES */ 
 
 
@@ -398,7 +521,10 @@ img {
 
   iframe {
     max-width: 50vw;
-  }
+ }
+
+ .container-1{  
+  padding-top: 3rem; }
 }
  
 @media screen and (max-width: 1794px) 
@@ -406,29 +532,3 @@ img {
 #about-us {
   width: fit-content ;
 } }
-
-
-/* NAVBAR MEDIA QUERIES */
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
